--- a/properties.css
+++ b/properties.css
@@ -7,17 +7,92 @@
 }   
 .navigation .black .my_modal{
     display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    width: 1115px;
+    height: 1070px;
+    position: fixed;
+    margin:auto;
+    background-color: #FFFFFF;
+    box-shadow: 2px 2px 5px rgba(34, 98, 198, 0.15);
+    border-radius: 3px;
+    top: 24px;
+    left: 100px;
+    box-sizing: border-box;
+}
+
+.black .my_modal .head_blue{
+    padding: 17px 20px;
+    box-sizing: border-box;
+    background: #2262C6;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    color: #FFFFFF;
+    height: 60px;
+    width: 100%;
+    display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
-    width: 300px;
-    height: 600px;
-    position: fixed;
-    margin:0;
-    background-color: firebrick;
+    justify-content: flex-start;
 }
-.my_modal input{
-    
+.black .my_modal .contain{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 30px 20px;
+    background-color: #FFFFFF;
+    flex: 1;
+    width: 100%;
+    box-sizing: border-box;
+}
+.black  .my_modal .contain .select_1{
+    border: 1px solid rgba(34, 98, 198, 0.5);
+    box-sizing: border-box;
+    border-radius: 3px;
+    width: 100%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    margin-bottom: 20px;
+}   
+.black  .my_modal .contain .select_1 .title{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 23px;
+    color: #2262C6;
+    width: 220px;
+
+}
+.black  .my_modal .contain .select_1 .cheque{
+    display: flex;
+    flex-direction: column;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 23px;
+    color: #505050;
+    flex: 1;
+}
+.black  .my_modal .contain .select_1 .cheque .choose{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 23px;
+    color: #505050;
+    margin-bottom: 20px;
+}
+.black  .my_modal .contain .select_1 .cheque .choose input{
+    margin-right: 10px;
 }
 .navigation .black{
     display: none;
@@ -412,7 +487,7 @@
 
     margin-bottom: 20px;
 }
-.calendar_input{
+/* .calendar_input{
     display: flex;
     flex-direction: row !important;
     align-items: center !important;
@@ -432,8 +507,8 @@
     width: 18px;
     height: 20px;
     margin-right: 10px;
-}
-.bottom_submit{
+} */
+/* .bottom_submit{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -482,7 +557,7 @@
     background: #2262C6;
     font-family: Noto Sans TC;
     color: #FFFFFF;
-}
+} */
 
 
 /* 这个是properties的 */
@@ -493,6 +568,11 @@
     justify-content: space-between;
     width: 100%;
     margin-bottom: 10px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 16px;
+    color: #737373;
 }
 .title_properties h1{
     font-style: normal;
@@ -554,6 +634,25 @@
     border-radius: 3px;
     height: 36px;
     font-weight: 500;
+    padding: 8px 10px;
+}
+.properties_card .top_content .left_filter span{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 20px;
+    color: #2262C6;
+    padding: 8px 10px;
+    box-sizing: border-box;
+    height: 36px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #FFFFFF;
+    border: 1px solid #2262C6;
+    box-sizing: border-box;
+    border-radius: 3px;
+    margin-left: 10px;
 }
 .properties_card .top_content .right_search{
     display: flex;
@@ -577,8 +676,11 @@
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
-    color: #C4C4C4;
     margin-left: 10px;
+    padding: 8px 10px;
+}
+.properties_card .top_content .right_search input::placeholder{
+    color: #C4C4C4;
 }
 .properties_card .top_content .right_search span{
     display: flex;
@@ -657,6 +759,12 @@
     line-height: 17px;
     color: #505050;
     width: 90px;
+}
+.properties_card table tbody tr th div{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
 .properties_card .bottom{
     display: flex;
@@ -1035,7 +1143,7 @@
 .landlord_card .banking .row_line div select {
     outline: none;
     background: #FFFFFF;
-    border: 1px solid #C4C4C4;
+    border: 1px solid #000000;
     box-sizing: border-box;
     border-radius: 3px;
     font-style: normal;
