--- a/modal.css
+++ b/modal.css
@@ -25,7 +25,6 @@
     left: 0;
     z-index: 0;
 }
-
 .black_background .my_modal .head_blue{
     padding: 17px 20px;
     box-sizing: border-box;
@@ -52,6 +51,12 @@
     flex: 1;
     width: 100%;
     box-sizing: border-box;
+}
+.black_background .my_modal h1{
+    font-style: normal;
+    font-weight: bold;
+    line-height: 23px;
+    color: #2262C6;
 }
 .black_background  .my_modal .contain .select_1{
     border: 1px solid rgba(34, 98, 198, 0.5);
@@ -337,4 +342,74 @@
     line-height: 23px;
     color: #505050;
     width: 435px;
+}
+.add_management_distribution{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 30px;
+    box-sizing: border-box;
+    width: 100%;
+    flex: 1;
+}
+.add_management_distribution p{
+    margin-bottom: 10px;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #505050;
+}
+.add_management_distribution .column p{
+    font-weight: bold;
+}
+.add_management_distribution span{
+    margin-bottom: 30px;
+}
+.add_management_distribution h1{
+    font-size: 16px;
+}
+.edit_management_fee{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 30px;
+    box-sizing: border-box;
+    width: 100%;
+    max-height: 600px;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #505050;
+    position: relative;
+    overflow-y: scroll;
+}
+.edit_management_fee .column{
+    color: #4b3c3c;
+    margin-bottom: 20px;
+}
+.black_background  .my_modal .edit_management_fee h1{
+    font-size: 16px;
+    color: #4b3c3c;
+}
+.black_background  .my_modal .edit_management_fee .pic{
+    margin-right: 10px;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+}
+.black_background  .my_modal .edit_management_fee p{
+    width: auto;
+}
+.black_background  .my_modal .edit_management_fee .head_pic {
+    position: absolute;
+    top: 30px;
+    right: 90px;
+}
+/* 日历组件里的样式 */
+.black_background  .my_modal .edit_management_fee .calendar-head{
+    display: flex;
+    flex-direction: column;
 }
