--- a/row_line.css
+++ b/row_line.css
@@ -6,6 +6,44 @@
     width: 100%;
     margin-bottom: 20px;
 }
+.row_between{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+.row{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+.column{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.column_start{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+}
+.row_end_start{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-start;
+}
+.blue_bold{
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 23px;
+    color: #2262C6;
+
+}
  .row_line div{
     flex-direction: column;
     align-items: center;
@@ -70,6 +108,9 @@
     align-items: center;
     justify-content: center;
     width: 100%;
+}
+.margin_top_40{
+    margin-top: 40px;
 }
 .bottom_submit div{
     border-radius: 3px;
